--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,1 +1,97 @@
 // Here you can add other styles
+.c-header .c-subheader {
+    margin-top: -1px;
+    border-top: 1px solid #d8dbe0;
+    display: flex;
+    flex-direction: row;
+}
+.routeNavs{
+    align-self: end;
+}
+.titleSection{
+    padding-left: 1rem;
+    padding-top: 0.5rem;
+    align-self: flex-start;
+    font-weight: 600;
+}
+
+.table_user_list nav {
+    position: absolute;    
+    padding-top: 2rem;
+    right: 0;
+    bottom: 0px;
+}
+
+.table_user_list {
+    margin-top: 2rem;
+    position: relative;
+    padding-bottom: 5rem;    
+}
+
+.table_user_list thead {
+    background: #cacaca;
+}
+
+.table_user_list .c-datatable-filter {
+    position: absolute;
+    left: 10rem;
+}
+
+.table_user_list .c-datatable-items-per-page {
+    position: absolute;
+    left: 10rem;
+}
+
+.btnTextWhite {
+    color: #fff;
+    letter-spacing: 0.01rem;
+    font-size: 1.2rem;
+    align-self: flex-start;
+    border-radius: 5rem;
+    background: #00b894;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.margTop {
+    margin-top: 2rem;
+}
+
+.c-datatable-filter input{
+    border-radius: 5rem;
+    width: 100%;
+}
+
+.tableBarTop{
+    display: flex;
+    flex-direction: column;   
+}
+
+.tableBarTop .statusTable{
+    align-self: end;
+}
+
+.containerTabs {
+    margin-top: 4rem;
+}
+
+.labelTitle {
+    text-align: right;
+}
+
+.paddContainer{
+    padding: 2rem 1rem;
+}
+
+.statusDrop{
+    border: 1px solid #d8dbe0;
+    margin-top: -0.5rem;
+}
+.inputPhone #nf-phone, .inputPhone #nf-mobilephone{
+    border: 1px solid #d8dbe0;
+    padding: 0.5rem;    
+    border-radius: 5px;
+}
+.pd-left{
+    margin-left: 1rem
+}
